loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.decimal3.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-logging-grafana
            port:
              number: 80
